--- a/NYP2018/nbproject/project.properties
+++ b/NYP2018/nbproject/project.properties
@@ -27,11 +27,10 @@ dist.dir=dist
 dist.jar=${dist.dir}/NYP2018.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.47-bin.jar=C:\\Program Files\\Java\\mysql-connector-java-5.1.47\\mysql-connector-java-5.1.47-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.47-bin.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
